themes/webtrees/style.css
/* ... */
.favorites_form {
	margin-top: 0px;
}

.help {
	font-weight: bold;
	cursor: help;
}

.menuitem, .menuitem_rtl {
	color: #555555;
	text-decoration: none;
	font: 11px tahoma, arial, helvetica, sans-serif;
	text-align: center;
	padding: 1px;
}

.menuitem_hover, .menuitem_hover_rtl {
	color: black;
	text-decoration: none;
	font: 11px tahoma, arial, helvetica, sans-serif;
	text-align: center;
	padding: 1px;
}

.submenu, .submenu_rtl {
	color: black;
	text-decoration: none;
	font: 11px tahoma, arial, helvetica, sans-serif;
	background-color: #edf7fd;
	border: solid #81a9cb 1px;
	white-space: nowrap;
	visibility: hidden;
	position: absolute;
}

.submenuitem, .submenuitem_rtl {
	vertical-align: middle;
	height: 20px;
	color: #555555;
	text-decoration: none;
	font: 11px tahoma, arial, helvetica, sans-serif;
	background-color: #edf7fd;
	white-space: nowrap;
	padding: 1px;
}

.submenuitem, .submenuitem_hover {
	text-align: left;
}

.submenuitem_rtl, .submenuitem_hover_rtl {
	text-align: right;
}

.submenuitem_hover, .submenuitem_hover_rtl {
	vertical-align: middle;
	height: 20px;
	color: black;
	font: 11px tahoma, arial, helvetica, sans-serif;
	background-color: #e6f0fa;
	white-space: nowrap;
	padding: 1px;
}

.submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
	display: inline-block;
	vertical-align: middle;
}

.news_box {
	background-color: #edf7fd;
	border: solid #81a9cb 1px;
}

.news_title {
	font: bold 14px tahoma, arial, helvetica, sans-serif;
	color: black;
}

.news_date {
	color: black;
	margin-bottom: 12px;
}

.current_day {
	font-weight: bold;
	font-size: 16px;
}

.cal_day {
	float: left;
	font-weight: bold;
}

.rtl_cal_day {
	direction: rtl;
	float: right;
	color: blue;
	font-weight: bold;
}

.helpcontent {
	margin-left: 10px;
	margin-right:10px;
}

.helpfooter {
	margin: 10px;
}

.helpheader {
	margin: 10px;
	font-size: 18px;
	font-weight: bold;
	color: black;
}

.helpstart {
	margin: 10px;
	font: bold 14px tahoma, arial, helvetica, sans-serif;
	color: blue;
	text-decoration: none;
}

.helptext {
	font: 12px tahoma, arial, helvetica, sans-serif;
	color: black;
}


	
#content {
	margin-left: 1px;
}

#footer {
	clear: both;
	color: black;
	font: 12px tahoma, arial, helvetica, sans-serif;
	width: 99%;
}

/*-- index.php specific style sheets -- */
.small_inner_block {
	max-height: 200px;
	overflow: auto;
	font: normal 10px tahoma, arial, helvetica, sans-serif;
}

.normal_inner_block {
	overflow: auto;
}

.block {
	background-color: #edf7fd;
	color: black;
	border: solid #81a9cb 1px;
	font: 12px tahoma, arial, helvetica, sans-serif;
	vertical-align: top;
	margin-bottom: 5px;
	padding: 1px;
}

.blockcontent {
	margin-left:auto;
	margin-right:5px;
	margin-bottom:10px;
	font-size: 13px;
	overflow:auto;
}

#index_main_blocks {
	clear: none;
	width: 66%;
	float: left;
}

#index_small_blocks {
	clear: none;
	width: 33%;
	float: right;
}

#index_full_blocks {
	clear: none;
	width: 100%;
}

#random_picture {
	text-align: center;
}

/*-- pedigree chart specific stylesheets --*/
#pedigree_chart {
	position: relative;
	top: -200px;
	left: 0px;
}

/*-- pedigree chart rtl specific stylesheets --*/
#pedigree_chart_rtl {
	position: relative;
	top: -250px;
	right: 10px;
}

/*-- descendancy chart specific stylesheets --*/
#descendancy_chart ul {
	background-image: url(../../images/vline.gif);
	background-repeat: repeat-y;
	background-position: left top;
	list-style: none;
	margin: 0px 0px 5px 15px; /* top right bottom left */
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
}

#descendancy_chart li {
	list-style: none;
	margin: 0px 0px 0px -15px; /* top right bottom left */
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
}

/*-- descendancy chart rtl specific stylesheets --*/
#descendancy_chart_rtl ul {
	background-image: url(../../images/vline.gif);
	background-repeat: repeat-y;
	background-position: right top;
	list-style: none;
	margin: 0px 15px 5px 0px; /* top right bottom left */
	padding-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}

#descendancy_chart_rtl li {
	list-style: none;
	margin: 0px -15px 0px 0px; /* top right bottom left */
	padding: 0px 0px 0px 0px; /* top right bottom left */
}

/*-- relationship chart specific stylesheets --*/
#relationship_chart {
	position: relative;
	top: -40px;
	left: 0px;
}

#relationship_chart_rtl {
	position: relative;
	top: -40px;
	right: 10px;
}

/*-- ancestry chart specific stylesheets --*/
#ancestry_chart ul {
	background-image: url(../../images/vline.gif);
	background-repeat: repeat-y;
	background-position: left top;
	list-style: none;
	margin: 0px 0px 0px 15px; /* top right bottom left */
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
}

#ancestry_chart li {
	list-style: none;
	margin: 0px 0px 2px -13px; /* top right bottom left */
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
}

/*-- ancestry chart rtl specific stylesheets --*/
#ancestry_chart_rtl ul {
	background-image: url(../../images/vline.gif);
	background-repeat: repeat-y;
	background-position: right top;
	list-style: none;
	margin: 0px 15px 0px 0px; /* top right bottom left */
	padding-top: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}

#ancestry_chart_rtl li {
	list-style: none;
	margin: 0px -15px 2px 0px; /* top right bottom left */
	padding: 0px 2px 0px 0px; /* top right bottom left */
}

/*-- relationship chart specific stylesheets --*/
#relationship_chart {
	position: relative;
	top: -40px;
	left: 0px;
}

#relationship_chart_rtl {
	position: relative;
	top: -40px;
	right: 0px;
}

/*-- timeline chart specific styles --*/
#timeline_chart {
	position: relative;
	top: 0px;
	left: 0px;
}

.timeline_table {
}

.person0 {
	background-color: #aaaaff;
	border: outset #aaaaff 1px;
	vertical-align: top;
}

.person1 {
	background-color: #aaffaa;
	border: outset #aaffaa 1px;
	vertical-align: top;
}

.person2 {
	background-color: #ffaaaa;
	border: outset #ffaaaa 1px;
	vertical-align: top;
}
/* ... */

